# multiagent_rag_full

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  graph.py  pyproject.toml  rag_store.py  web_tools.py
backend/data/chroma/: chroma.sqlite3
ui/: Dockerfile  pyproject.toml  streamlit_app.py
